kubernetes/apps/monitoring/kube-prometheus-stack/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - grafana.${SECRET_DOMAIN}
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
